@@ -1,5 +1,6 @@
 2010-09-23  Xavier Perseguers  <typo3@perseguers.ch>
 
+	* Fixed generation of shortcut link
 	* Fixed function menu in toolbar
 
 2010-09-14  Xavier Perseguers  <typo3@perseguers.ch>
